[project]
name = "progress-bar"
version = "0.2.0"
description = "Utility function to display a progress bar in the console, either in the terminal or in jupyter."
readme = "README.md"
authors = [
    { name = "Benoit Roux", email = "benoit.roux@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.2.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
